# manga_tracker

./: Cargo.toml
src/: main.rs
