[package]
name = "manga_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.5.0"
crabquery = "0.1.9"
clap = { version = "4.0.9", features = ["derive"] }
temp-file = "0.1.7"
rusqlite = { version = "0.28.0", features = ["bundled"] }
directories = "4.0.1"